--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -5,8 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Front Matter Search</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+        />
     </head>
     <body>
-        <h1>Front Matter Search</h1>
+        {{ content | safe }}
     </body>
 </html>
