--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,6 +9,11 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
         />
+        <style>
+            #results li {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         {{ content | safe }}
