--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,13 +9,10 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
         />
-        <style>
-            #results li {
-                display: none;
-            }
-        </style>
     </head>
     <body>
-        {{ content | safe }}
+        <div class="container">
+            {{ content | safe }}
+        </div>
     </body>
 </html>
