--- a/src/index.njk
+++ b/src/index.njk
@@ -4,19 +4,25 @@ title: Index
 url: /
 ---
 
-<section>
-    <h1 class="title">Glossary Search</h1>
-
-    <input
-        class="input"
-        autofocus
-        autocomplete="off"
-        type="search"
-        id="search"
-        placeholder="Use a keyword to describe a fruit or vegetable..."
-    />
+<section class="hero">
+    <div class="hero-body">
+        <h1 class="title">Produce Glossary</h1>
+        <div class="control has-icons-left">
+            <input
+                class="input"
+                autofocus
+                autocomplete="off"
+                type="search"
+                id="search"
+                placeholder="Use a keyword to describe a fruit or vegetable..."
+            />
+            <span class="icon is-left">
+                <i class="fas fa-search"></i>
+            </span>
+        </div>
+    </div>
 </section>
-<section>
+<section class="section">
     <ol id="results">
         <li data-noresult style="display: none;">
             No results found
