--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,6 +9,16 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
         />
+        <style>
+            #results li {
+                display: none;
+                list-style-type: none;
+            }
+
+            #results li:nth-child(1) {
+                display: block;
+            }
+        </style>
         <script
             defer
             src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
