added html minification support for deployments

--- a/src/index.njk
+++ b/src/index.njk
@@ -31,7 +31,7 @@ url: /
             </em>
         </li>
         <li data-noresult>
-            No results found
+            No results found...
         </li>
         {% for post in collections.all %} {% if post.data.title != "Index" %}
         <li
