optimizations for lighthouse

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -4,6 +4,10 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="description"
+            content="Demo for searchable front matter using Eleventy.js"
+        />
         <title>Front Matter Search</title>
         <link
             rel="stylesheet"
@@ -19,14 +23,14 @@
                 display: block;
             }
         </style>
-        <script
-            defer
-            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
-        ></script>
     </head>
     <body>
         <div class="container">
             {{ content | safe }}
         </div>
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+        ></script>
     </body>
 </html>
